test/class/invalid/accessingField.wacc
begin
  class Dog is
   Cat x;
  
   init(Cat x) is
     self.x = x
   end

  end

  class Cat is
    int x;

    init(int x) is
      self.x = x
    end
  end

  Cat c = new Cat(1);
  Dog d = new Dog(c);
  # accessing a variable should only be able to access functions
  d.c.x

end


